feat(gradle): auto-attach assertion agent to test JVMs (build-time weaving auto-wiring)
The Gradle plugin can now attach the Kronikol4J assertion-tracking agent to
every Test JVM, so users no longer pass -javaagent: by hand.

- kronikol { attachAssertionAgent = true } opt-in (+ assertionAgentCoordinates override)
- resolvable kronikolAssertionAgent configuration: declares the agent dependency
  lazily (addAllLater, gated on the flag), defaulting to the plugin's own version
- jvmArgumentProvider on each Test task emits
  -javaagent:<jar> -Dnet.bytebuddy.experimental=true
- pure AssertionAgentArgs helper for the arg decision (unit-tested)
- KronikolPluginTest ProjectBuilder wiring assertions (dep only when opted in)

.NET's compile-time StepTracking IL-weave and AssertionRewriter Roslyn source
rewrite remain documented C#-IL/source-AST boundaries (the runtime ByteBuddy
agent is the IL-weaver analog). Maven auto-attach tracked under the maven-plugin item.

Ticks 'Build-time weaving auto-wiring' [~] in REMAINING_PARITY.md.